--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="/src/spotify_auth.js"></script>
+    <script src="/src/spotify_use.js"></script>
+    <script src="/src/sessionTimer.js"></script>
+    <script src="/src/functions.js"></script>
   </body>
 </html>
